Afegint files a BoardUtils
Signed-off-by: Victor Piles <victorpilesdelgado@gmail.com>