@@ -1,7 +1,6 @@
 package org.victorpiles.escacs.engine.util.board;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public abstract class BoardUtils {
@@ -14,6 +13,9 @@ public abstract class BoardUtils {
     public static final List<Boolean> SEVENTH_COLUMN = initializeColumn(6);
     public static final List<Boolean> EIGHT_COLUMN = initializeColumn(7);
 
+    public static final List<Boolean> SECOND_RANK = initializeRow(48);
+    public static final List<Boolean> SEVENTH_RANK = initializeRow(8);
+
     private static List<Boolean> initializeColumn(int columnNumber) {
         final Boolean[] column = new Boolean[NUMBER_OF_SQUARES];
         Arrays.fill(column, false);
@@ -21,7 +23,7 @@ public abstract class BoardUtils {
             column[columnNumber] = true;
             columnNumber += NUMBER_OF_SQUARES_PER_ROW;
         } while (columnNumber < NUMBER_OF_SQUARES);
-        return Collections.unmodifiableList(Arrays.asList((column)));
+        return List.of((column));
     }
 
     private static List<Boolean> initializeRow(int rowNumber) {
@@ -31,6 +33,6 @@ public abstract class BoardUtils {
             row[rowNumber] = true;
             rowNumber++;
         } while (rowNumber % NUMBER_OF_SQUARES_PER_ROW != 0);
-        return Collections.unmodifiableList(Arrays.asList(row));
+        return List.of(row);
     }
 }
